<resources>
    <string name="app_name">TankClient</string>
    <string name="action_settings">Settings</string>

    <string name="grid">grid</string>

    <string name="up">FORWARD</string>
    <string name="down">REVERSE</string>
    <string name="right">TURN RIGHT</string>
    <string name="left">TURN LEFT</string>
    <string name="fireOne">FIRE I</string>
    <string name="fireTwo">FIRE II</string>
    <string name="fireThree">FIRE III</string>
    <string name="join">JOIN</string>
    <string name="leave">LEAVE</string>


    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/tank_down</item>
        <item>@drawable/tank_down</item>
        <item>@drawable/tank_down</item>
        <item>@drawable/tank_down</item>
        <item>@drawable/tank_down</item>
        <item>@drawable/tank_down</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
