<LinearLayout android:id="@+id/LinearLayout1"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="0dp"
              android:orientation="vertical"
              android:padding="0dp"
              tools:context=".TankClientActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/gray"
            android:numColumns="16"
            tools:listitem="@layout/field_item">
        </GridView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/LinearLayoutControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:id="@+id/buttonBackward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/buttonLeft"
            android:layout_toLeftOf="@+id/buttonRight"
            android:layout_toRightOf="@+id/buttonLeft"
            android:layout_toStartOf="@+id/buttonRight"
            android:onClick="moveBk"
            android:text="@string/down"/>

        <Button
            android:id="@+id/buttonForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonBackward"
            android:layout_alignEnd="@+id/buttonBackward"
            android:layout_alignRight="@+id/buttonBackward"
            android:layout_toEndOf="@+id/buttonLeft"
            android:layout_toRightOf="@+id/buttonLeft"
            android:onClick="moveForward"
            android:text="@string/up"/>

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="turnL"
            android:text="@string/left"/>

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/buttonFire"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/buttonFire"
            android:onClick="turnR"
            android:text="@string/right"/>

        <Button
            android:id="@+id/buttonFire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:onClick="fire"
            android:text="@string/fire"/>
        <!--android:onClick="fire"-->

    </RelativeLayout>

</LinearLayout>